# cosmic-ext-applet-hue

./: .gitignore  Cargo.toml  README.md  fr.clockworks.cosmic-ext-applet-hue.json  justfile
i18n/en/: cosmic_hue.ftl
i18n/fr/: cosmic_ext_applet_hue.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs
